--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                     </a>
                 </div>
                 <div class="col-12 col-lg-6 fadeInLeft wow img_div" id="B4">
-                        <img src="./img/NY1.jpg" alt="" class="w-100 h-100">
+                        <img src="./img/5bb7128266c61.jpeg" alt="" class="w-100 h-100">
                         <a href="#">
                             <!-- 遮罩的東西 -->
                             <div class="mask"> 
@@ -282,6 +282,33 @@
                             <!-- 遮罩的東西 -->
                             <div class="mask"> 
                                     <h3>活動海報</h3>
+                                    <p>By Photoshop</p>
+                                </div>
+                        </a>
+                    </div>
+            </div>
+    
+        </div>
+
+
+        <div class="container my-5" >
+            <div class="row my-6">
+                <div class="col-12 col-lg-6 fadeInLeft wow img_div" id="B5">
+                    <img src="./img/T1 .jpg" alt="" class="w-100 h-100">
+                    <a href="#">
+                        <!-- 遮罩的東西 -->
+                        <div class="mask"> 
+                                <h3>Banner</h3>
+                                <p>By Photoshop</p>
+                            </div>
+                    </a>
+                </div>
+                <div class="col-12 col-lg-6 fadeInLeft wow img_div" id="B5">
+                        <img src="./img/T2.jpg" alt="" class="w-100 h-100">
+                        <a href="#">
+                            <!-- 遮罩的東西 -->
+                            <div class="mask"> 
+                                    <h3>Banner</h3>
                                     <p>By Photoshop</p>
                                 </div>
                         </a>
