--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                     </a>
                 </div>
                 <div class="col-12 col-lg-6 fadeInLeft wow img_div" id="B4">
-                        <img src="./img/5b484cc4c136d (1).jpeg" alt="" class="w-100 h-100">
+                        <img src="./img/NY1.jpg" alt="" class="w-100 h-100">
                         <a href="#">
                             <!-- 遮罩的東西 -->
                             <div class="mask"> 
