--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                     
                 </div>
                     <div class="col-12 col-lg-6 fadeIn m-img" id="B4">
-                        <img src="./img/5bb7128266c61.jpeg" alt="" class="w-100 h-100">
+                        <img src="./img/1.jpg" alt="" class="w-100 h-100">
                         <div class="mask-info"> 
                             <a href="#" class="mask-info__link">
                                     <h3>商品簡介設計</h3>
