--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   
  
       
-        <a class="navbar-brand" href="index.html" style="font-size:30px" id="logoo1" > 
+        <a class="navbar-brand" href="#" style="font-size:30px" id="logoo1" > 
             <img src="./img/LULOHG.png" alt="" width="50" height="50">
             About LU</a>   
             
