--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
                     <a href="#" class="rotate-box-1 square-icon wow fadeIn" data-wow-delay="0.2s" style="text-decoration:none;">
                         <span class="rotate-box-icon" style="color: rgb(150, 121, 95); "><i class="fa fa-heart"></i></i></span>
                         <div class="rotate-box-info" style="color: rgb(150, 121, 95); ">
-                            <h4>靜宜大學 文書組</h4>
-                            <p>文書處理/掃描、公文系統維修</p>
+                            <h4>永晉國際有限公司</h4>
+                            <p>擔任美編海報文宣設計、業務文書處理、報價、工廠廠商聯繫、開發業務</p>
                         </div>
                     </a>
                 </div>
@@ -184,8 +184,8 @@
                     <a href="#" class="rotate-box-1 square-icon wow fadeIn" data-wow-delay="0.4s" style="text-decoration:none;">
                         <span class="rotate-box-icon" style="color: rgb(150, 121, 95); "><i class="fa fa-heart"></i></span>
                         <div class="rotate-box-info" style="color: rgb(150, 121, 95); ">
-                            <h4>永晉國際有限公司</h4>
-                            <p>擔任美編海報文宣設計、業務文書處理、報價、工廠廠商聯繫、開發業務</p>
+                            <h4>樂天市場 網頁設計助理</h4>
+                            <p>網頁維運、活動頁面BN設計排版、EDM發送、站內頁面更新</p>
                         </div>
                     </a>
                 </div>
