--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                         <span class="rotate-box-icon" style="color: rgb(150, 121, 95); "><i class="fa fa-heart"></i></span>
                         <div class="rotate-box-info" style="color: rgb(150, 121, 95); ">
                             <h4>樂天市場 網頁設計助理</h4>
-                            <p>網頁維運、活動頁面BN設計排版、EDM發送、站內頁面更新</p>
+                            <p>網頁維運、活動頁面Banner設計排版、EDM發送、活動頁面更新、Banner Resize</p>
                         </div>
                     </a>
                 </div>
