--- a/index.html
+++ b/index.html
@@ -323,11 +323,11 @@
         <div class="container my-5" >
             <div class="row my-12">
                 <div class="col-12 col-lg-12 fadeIn img_div" id="B5">
-                    <img src="./img/0609.png" alt="" class="w-100 h-100">
+                    <img src="./img/0609.jpg" alt="" class="w-100 h-100">
                     <a href="#">
                         <!-- 遮罩的東西 -->
                         <div class="mask"> 
-                                <h3>Banner</h3>
+                                <h3>活動頁</h3>
                                 <p>By Photoshop</p>
                             </div>
                     </a>
@@ -340,11 +340,11 @@
     <div class="container my-5" >
             <div class="row my-12">
                 <div class="col-12 col-lg-12 fadeIn img_div" id="B5">
-                    <img src="./img/0514_.png" alt="" class="w-100 h-100">
+                    <img src="./img/0514_.jpg" alt="" class="w-100 h-100">
                     <a href="#">
                         <!-- 遮罩的東西 -->
                         <div class="mask"> 
-                                <h3>Banner</h3>
+                                <h3>活動頁</h3>
                                 <p>By Photoshop</p>
                             </div>
                     </a>
