--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 
         <div class="container my-5" >
             <div class="row my-6 mask__div">
-                <div class="col-12 col-lg-7 fadeIn  m-img" id="B5">
+                <div class="col-12 col-lg-7 fadeIn  img_div " id="B5">
                     <img src="./img/970X250.png" alt="" class="w-100 h-80">
                     <a href="#">
                         <!-- 遮罩的東西 -->
@@ -305,7 +305,7 @@
                             </div>
                     </a>
                 </div>
-                <div class="col-12 col-lg-5 fadeIn  m-img" id="B5">
+                <div class="col-12 col-lg-5 fadeIn  img_div " id="B5">
                         <img src="./img/pc_680NN.jpg" alt="" class="w-100 h-100">
                         <a href="#">
                             <!-- 遮罩的東西 -->
