--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
                     <a href="#" class="rotate-box-1 square-icon wow fadeIn " data-wow-delay="0" style="text-decoration:none;">
                         <span class="rotate-box-icon" style="color: rgb(128, 92, 60); "><i class="fa fa-heart"></i></i></span>
                         <div class="rotate-box-info" style="color: rgb(116, 78, 45); ">
-                            <h4>靜宜大學 蓋夏圖書館 參考組</h4>
-                            <p>負責FB粉絲專業美編、文獻掃描、館際合作</p>
+                            <h4>永晉國際有限公司</h4>
+                            <p>擔任美編海報文宣設計、業務文書處理、報價、工廠廠商聯繫、開發業務</p>
                         </div>
                     </a>
                 </div>
@@ -174,8 +174,8 @@
                     <a href="#" class="rotate-box-1 square-icon wow fadeIn" data-wow-delay="0.2s" style="text-decoration:none;">
                         <span class="rotate-box-icon" style="color: rgb(150, 121, 95); "><i class="fa fa-heart"></i></i></span>
                         <div class="rotate-box-info" style="color: rgb(150, 121, 95); ">
-                            <h4>永晉國際有限公司</h4>
-                            <p>擔任美編海報文宣設計、業務文書處理、報價、工廠廠商聯繫、開發業務</p>
+                            <h4>樂天市場 網頁設計助理</h4>
+                            <p>網頁維運、活動頁面Banner設計排版、EDM發送、活動頁面更新、Banner Resize</p>
                         </div>
                     </a>
                 </div>
@@ -184,8 +184,8 @@
                     <a href="#" class="rotate-box-1 square-icon wow fadeIn" data-wow-delay="0.4s" style="text-decoration:none;">
                         <span class="rotate-box-icon" style="color: rgb(150, 121, 95); "><i class="fa fa-heart"></i></span>
                         <div class="rotate-box-info" style="color: rgb(150, 121, 95); ">
-                            <h4>樂天市場 網頁設計助理</h4>
-                            <p>網頁維運、活動頁面Banner設計排版、EDM發送、活動頁面更新、Banner Resize</p>
+                            <h4>金石堂 網頁設計師</h4>
+                            <p>活動頁面視覺設計製作、Banner設計製作、EDM製作</p>
                         </div>
                     </a>
                 </div>
